...
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/video_bottom_panel"/>

            <Button
                android:id="@+id/shutter_button"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/shutter_button_photo"/>

...
