...
                    android:layout_marginLeft="30dp"
                    android:text="All Messages"
                    android:textColor="@color/black"
                    android:textSize="12sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/chatpage_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true">


                </androidx.recyclerview.widget.RecyclerView>
...
